Adicionando introdução ao cap2

--- a/Capitulo2(Relatorio).tex
+++ b/Capitulo2(Relatorio).tex
@@ -10,17 +10,26 @@
 
 \section{{O Método de Newton}}
 
-% TODO: Adicionar texto entre o início do cap e início da sessao
-% Talvez falar sobre newton, sobre a criação do método, e tals
-% Fazer a introdução
-
-\subsection{Entendendo o Método}
-
 \hspace{0.8cm}
+Escrito por Isaas Newton na obra \textit{De analysi per aequationes número
+terminorum infinitas} publicada em 1711, o Método de Newton passou por
+alterações, sendo aprimorado por Joseph Raphson para qualquer tipo de função
+real, em 1690, sendo novamente publicado em \textit{De metodis fluxionum et
+serierum infinitarum} no ano de 1736, fazendo com que o dado método também seja
+amplamente conhecido por o Método de Newton-Raphson.
+
+É válido também salientar que o método não foi apresentado como hoje é
+trabalhado. Houve a intervenção de vários grandes matemáticos como
+\textit{Cauchy}, \textit{Fourier} e \textit{Kantorovich}, contribuindo em sua
+prova.
+
 O Método de Newton, foi desenvolvido com o objetivo de encontrar estimativas
 para as raízes de uma função. De modo que, a execução do método é feita de
 forma iterativa, repetindo sempre o mesmo processo, atualizando o mesmo valor.
 
+\subsection{Entendendo o Método}
+
+\hspace{0.8cm}
 Este método faz uso do recurso de derivação. Existindo uma relação muito
 forte com o ângulo da reta tangente à curva, que é o gráfico da função que
 foi derivada. Ademais, é importante ressaltar a necessidade de um ``palpite''
@@ -139,16 +148,14 @@ aloo
 
 \subsection{Encontrando Mínimos}
 
-% TODO: Arruamar esse paragrafo
-
 \hspace{0.8cm}
 Agora podemos utilizar este método para encontrar mínimos de uma função.
 O Método de Newton calcula raízes. É possível vincular isto, com o que
 foi estudado no Capítulo 1. Obtemos os mínimos de uma função que como vimos
 podem ser representados como raízes de sua derivada. Considerando $g(x)$ uma
 função duas vezes diferenciável, e tendo como objetivo encontrar seus pontos
-de mínimo, pode-se utilizar o Método de Newton para resolver tal problema o
-que gera a seguinte sequência:
+de mínimo, pode-se utilizar o Método de Newton para resolver tal problema,
+gerando a seguinte sequência:
 
 %TODO: Falar mais/melhor sobre a sequencia {x_k} (tendencia ao 0 da função)
 
