--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -18,10 +18,10 @@
     \fancyhead[LO]{\small \scshape \nouppercase{\rightmark}}
 
     %Tema escuro k
-    %\usepackage[dvipsnames]{xcolor}
-    %\definecolor{Mycolor2}{HTML}{2E3440}
-    %\pagecolor{Mycolor2}
-    %\color{white}
+    \usepackage[dvipsnames]{xcolor}
+    \definecolor{Mycolor2}{HTML}{2E3440}
+    \pagecolor{Mycolor2}
+    \color{white}
 
     %Codigo
     \usepackage{listings}
