Adição na defi. de derivadas parciais

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -320,6 +320,13 @@ apresentamos a definição de derivada parcial:
 
 \begin{definition}[Derivadas Parciais]
 
+    Vale salientar que o cálculo do limite para funçãos à duas variáveis
+    difenrencia-se no caso de funçãoes reais à uma variável. Quando calculamos
+    o limite de funções reais à duas variáveis, devemos atentar para o fato
+    de que aqui fazemos uso da aproximação por curvas arbritárias, o que
+    dinamiza a complexidade do cálculo de tal limite, fazendo deste um elemento
+    muito mais sofisticado do que o que tiamos no caso à uma variável.
+
     Considerando uma função real $f$ definida em um subconjunto $D$ $\subseteq$ \(\mathbb{R}^2\). Definimos como as derivadas parciais de $f(x, y)$ os seguintes limites, quando existirem:
 
     \begin{equation}
