--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -91,7 +91,7 @@
     \newenvironment{proof}[1][\textbf{Demonstração:}\hspace{0.2cm}]{\textit{#1}}{\begin{flushright}\itshape{QED.}\end{flushright}}
 
     % Macros
-    \newcommand{\dfp}[2]{\frac{\partial#1}{\partial#2}}
+    \newcommand{\dfp}[2]{\displaystyle{\frac{\partial#1}{\partial#2}}}
 
 \begin{document}
 
